# hce-laboratory

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
cmake/: Findlibftdi1.cmake
dat/config/: hce-lab.ini
dat/installer/: script.nsi.in
debian/: control  copyright
doc/: OM27160B1HN-FT232h-connection.drawio
src/: CMakeLists.txt
src/hce-app/: CMakeLists.txt
src/hce-app/app-qt/: CMakeLists.txt
src/hce-app/app-qt/src/main/assets/app/: app.qrc
src/hce-app/app-qt/src/main/assets/theme/dark/icons/: icons.qrc
src/hce-app/app-qt/src/main/cpp/: QtApplication.h  QtConfig.h.in  QtControl.cpp  QtControl.h  QtWindow.ui  main.cpp
src/hce-app/app-qt/src/main/cpp/dialogs/: ConfigDialog.cpp
src/hce-app/app-qt/src/main/cpp/events/: ListenerControlEvent.cpp  ListenerControlEvent.h  ListenerStatusEvent.h  SystemShutdownEvent.h  SystemStartupEvent.cpp
src/hce-app/app-qt/src/main/cpp/format/: DataFormat.cpp
src/hce-app/app-qt/src/main/cpp/model/: ParserModel.h  StreamFilter.cpp  StreamFilter.h
src/hce-app/app-qt/src/main/cpp/protocol/: ProtocolParser.cpp  ProtocolParser.h
src/hce-app/app-qt/src/main/cpp/styles/: Theme.cpp
src/hce-app/app-qt/src/main/cpp/widgets/: HexViewWidget.cpp  HexViewWidget.h  IconDelegate.h  ParserDelegate.cpp  ParserDelegate.h  ParserWidget.cpp  ParserWidget.h  StreamDelegate.cpp  StreamMenu.cpp  StreamMenu.h  StreamWidget.cpp  StreamWidget.h
src/hce-app/app-t4t/: CMakeLists.txt
src/hce-app/app-t4t/src/main/cpp/: main-pn532.cpp  main-pn7160.cpp
src/hce-lib/lib-ext/ftdi1/: CMakeLists.txt
src/hce-lib/lib-ext/microaes/: CMakeLists.txt
src/hce-lib/lib-ext/microaes/src/main/include/: aes.h
src/hce-lib/lib-hce/hce-core/: CMakeLists.txt
src/hce-lib/lib-hce/hce-core/src/main/cpp/: Frame.cpp
src/hce-lib/lib-hce/hce-core/src/main/cpp/crc/: CRC.cpp
src/hce-lib/lib-hce/hce-core/src/main/cpp/crypto/: CMAC.cpp  Cipher.cpp  CipherAES.cpp  CipherDES.cpp
src/hce-lib/lib-hce/hce-core/src/main/include/hce/: T4T.h
src/hce-lib/lib-hce/hce-core/src/main/include/hce/crc/: CRC.h
src/hce-lib/lib-hce/hce-core/src/main/include/hce/crypto/: CMAC.h  Cipher.h  CipherAES.h  CipherDES.h
src/hce-lib/lib-hce/hce-targets/: CMakeLists.txt
src/hce-lib/lib-hce/hce-targets/src/main/cpp/t4t/: T4T.cpp
src/hce-lib/lib-hce/hce-targets/src/main/include/hce/targets/t4t/: T4T.h
src/hce-lib/lib-hce/hce-tasks/src/main/cpp/tasks/: AbstractTask.h  TargetListenerTask.cpp
src/hce-lib/lib-hce/hce-tasks/src/main/include/hce/tasks/: TargetListenerTask.h
src/hce-lib/lib-hw/: CMakeLists.txt
src/hce-lib/lib-hw/hw-dev/src/main/cpp/hw/dev/: ACR122U.cpp  PCSC.cpp
src/hce-lib/lib-hw/hw-dev/src/main/cpp/hw/ic/: PN7160.cpp
src/hce-lib/lib-hw/hw-dev/src/main/cpp/hw/proto/: HSU.cpp  MPSSE.cpp
src/hce-lib/lib-hw/hw-dev/src/main/include/hw/dev/: ACR122U.h  PCSC.h  Usb.h
src/hce-lib/lib-hw/hw-dev/src/main/include/hw/ic/: PN532.h
src/hce-lib/lib-hw/hw-dev/src/main/include/hw/proto/: HSU.h  MPSSE.h
src/hce-lib/lib-rt/rt-lang/src/main/cpp/: Format.cpp  Logger.cpp  Package.cpp  Worker.cpp
src/hce-lib/lib-rt/rt-lang/src/main/include/rt/: Catalog.h  FileSystem.h  Map.h  Package.h  Promise.h  Queue.h  Subject.h  Task.h  Tokenizer.h
src/nfc-app/app-qt/src/main/assets/app/rc/: hce-lab.desktop
src/nfc-app/app-qt/src/main/cpp/: QtApplication.cpp  QtControl.cpp  QtWindow.cpp  QtWindow.h  main.cpp
src/nfc-app/app-qt/src/main/cpp/dialogs/: ConfigDialog.h
src/nfc-app/app-qt/src/main/cpp/events/: ConsoleLogEvent.cpp  ConsoleLogEvent.h  ListenerFrameEvent.cpp  ListenerFrameEvent.h  ListenerStatusEvent.cpp  SystemShutdownEvent.cpp  SystemStartupEvent.h
src/nfc-app/app-qt/src/main/cpp/format/: DataFormat.h
src/nfc-app/app-qt/src/main/cpp/model/: ParserModel.cpp  StreamModel.cpp  StreamModel.h
src/nfc-app/app-qt/src/main/cpp/protocol/: ProtocolFrame.cpp  ProtocolFrame.h
src/nfc-app/app-qt/src/main/cpp/styles/: IconStyle.cpp  IconStyle.h  Theme.h
src/nfc-app/app-qt/src/main/cpp/widgets/: IconDelegate.cpp  StreamDelegate.h  StreamHeader.cpp  StreamHeader.h
src/nfc-lib/: CMakeLists.txt
src/nfc-lib/lib-ext/: CMakeLists.txt
src/nfc-lib/lib-ext/cppdes/: CMakeLists.txt
src/nfc-lib/lib-ext/cppdes/src/main/include/cppdes/: descbc.h
src/nfc-lib/lib-ext/ftdi1/src/main/c/: ftdi_version_i.h
src/nfc-lib/lib-ext/microtar/: CMakeLists.txt
src/nfc-lib/lib-hce/: CMakeLists.txt
src/nfc-lib/lib-hce/hce-core/: CMakeLists.txt
src/nfc-lib/lib-hce/hce-core/src/main/cpp/: T4T.cpp  Target.cpp
src/nfc-lib/lib-hce/hce-core/src/main/cpp/crypto/: CMAC.cpp  Cipher.cpp  CipherAES.cpp
src/nfc-lib/lib-hce/hce-core/src/main/include/hce/: Frame.h  Target.h
src/nfc-lib/lib-hce/hce-core/src/main/include/hce/crc/: CRC.h
src/nfc-lib/lib-hce/hce-targets/: CMakeLists.txt
src/nfc-lib/lib-hce/hce-targets/src/main/cpp/t4t/: T4T.cpp
src/nfc-lib/lib-hce/hce-tasks/: CMakeLists.txt
src/nfc-lib/lib-hce/hce-tasks/src/main/cpp/tasks/: TargetListenerTask.cpp
src/nfc-lib/lib-hce/hce-tasks/src/main/include/hce/tasks/: TargetListenerTask.h
src/nfc-lib/lib-hw/hw-dev/: CMakeLists.txt
src/nfc-lib/lib-hw/hw-dev/src/main/cpp/hw/dev/: PCSC.cpp  Usb.cpp
src/nfc-lib/lib-hw/hw-dev/src/main/cpp/hw/ic/: PN532.cpp
src/nfc-lib/lib-hw/hw-dev/src/main/cpp/hw/proto/: MPSSE.cpp
src/nfc-lib/lib-hw/hw-dev/src/main/include/hw/dev/: PCSC.h
src/nfc-lib/lib-hw/hw-dev/src/main/include/hw/ic/: PN7160.h
src/nfc-lib/lib-hw/hw-dev/src/main/include/hw/proto/: MPSSE.h
src/nfc-lib/lib-rt/rt-lang/src/main/cpp/: Executor.cpp  FileSystem.cpp  Library.cpp  Map.cpp  Tokenizer.cpp
src/nfc-lib/lib-rt/rt-lang/src/main/include/rt/: Alloc.h  BlockingQueue.h  Buffer.h  ByteBuffer.h  Event.h  Executor.h  Finally.h  Format.h  Heap.h  Library.h  List.h  Logger.h  Observer.h  Shared.h  Throughput.h  Variant.h  Worker.h
tools/gdb/printers/rt/: __init__.py  printers.py
